Data deletion working, apparently. Added custom files to swagger-ignore and updated generated code
