# api/ingest/server/swagger_server/models/__init__.py
@@ -3,4 +3,3 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.api_response import ApiResponse
