# api/ingest/server/swagger_server/swagger/swagger.yaml
@@ -3,30 +3,23 @@ info:
   title: CrowdSorcerer Ingest API
   description: The Ingest API for data ingestion into the data lake (WIP).
   license:
-    name: 'GPLv3'
-    url: 'https://www.gnu.org/licenses/gpl-3.0.en.html'
+    name: GPLv3
+    url: https://www.gnu.org/licenses/gpl-3.0.en.html
   version: 0.0.1
 servers:
 - url: https://smarthouse.av.it.pt/api/ingest
   description: SmartHouse data gathering instance hosting the API
 tags:
 - name: data_upload
-  description: "# Data upload\nThrough the Home Assistant Aggregator, each home produces\
-    \ a data payload that is inserted into the platform as it is received. Each of\
-    \ these payloads is associated with an UUID, which is stored within the Aggregator\
-    \ instances and is sent along with the data. The data upload to the platform is\
-    \ done publicly, with no proper authentication.\n*As it stands, this UUID effectively\
-    \ identifies the home that produced its data, but no guarantees are made that\
-    \ the UUID was used by a single home, or if any data it is associated with is\
-    \ forged.*\n"
+  description: |
+    # Data upload
+    Through the Home Assistant Aggregator, each home produces a data payload that is inserted into the platform as it is received. Each of these payloads is associated with an UUID, which is stored within the Aggregator instances and is sent along with the data. The data upload to the platform is done publicly, with no proper authentication.
+    *As it stands, this UUID effectively identifies the home that produced its data, but no guarantees are made that the UUID was used by a single home, or if any data it is associated with is forged.*
 - name: data_deletion
-  description: "# Data deletion\nCompletely delete data associated with an UUID. This\
-    \ is the operation behind the Forget/Opt-out feature. The users have the right\
-    \ to delete all records from the platform at any time, provided they have the\
-    \ UUID that they uploaded the data by.\nThis operation can be executed publicly\
-    \ on any UUID, but no feedback is transmitted on whether or not the UUID existed\
-    \ previously on the platform. Although, if the operation fails for some reason,\
-    \ that is explicitly expressed.\n"
+  description: |
+    # Data deletion
+    Completely delete data associated with an UUID. This is the operation behind the Forget/Opt-out feature. The users have the right to delete all records from the platform at any time, provided they have the UUID that they uploaded the data by.
+    This operation can be executed publicly on any UUID, but no feedback is transmitted on whether or not the UUID existed previously on the platform. Although, if the operation fails for some reason, that is explicitly expressed.
 paths:
   /data:
     post:
@@ -57,10 +50,8 @@ paths:
       responses:
         "200":
           description: Successfully uploaded the data
-          content: {}
         default:
           description: Operation could not be carried out for an undefined reason
-          content: {}
       x-openapi-router-controller: swagger_server.controllers.data_upload_controller
     delete:
       tags:
@@ -80,27 +71,11 @@ paths:
       responses:
         "200":
           description: The data for the specified UUID is cleared from the platform
-          content: {}
         default:
           description: Operation could not be carried out for an undefined reason
-          content: {}
       x-openapi-router-controller: swagger_server.controllers.data_deletion_controller
 components:
-  schemas:
-    ApiResponse:
-      type: object
-      properties:
-        code:
-          type: integer
-          format: int32
-        message:
-          type: string
-        type:
-          type: string
-      example:
-        code: 0
-        message: message
-        type: type
+  schemas: {}
   parameters:
     HomeUUID:
       name: Home_UUID
